--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 
 <!--
 	========================================================================
-		
+
+	Point-Region Quad Tree
+	
 	Copyright (C) 2017 Roland Rytz <roland@draemm.li>
 	Licensed under the GNU Affero General Public License Version 3
 	This program is free software: you can redistribute it and/or modify
@@ -13,7 +15,7 @@
 	but WITHOUT ANY WARRANTY; without even the implied warranty of
 	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 	For more information, see:
-	https://draemm.li/various/place-atlas/license.txt
+	https://draemm.li/various/quadtree/LICENSE
 	
 	========================================================================
 -->
