Implement removal of points

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 				<label class="fancyRadio" for="mode-nearest">
 					Find nearest
 				</label>
-				<!--input class="fancyRadio" type="radio" value="delete" name="mode" id="mode-delete">
+				<input class="fancyRadio" type="radio" value="delete" name="mode" id="mode-delete">
 				<label class="fancyRadio" for="mode-delete">
 					Find nearest and delete
-				</label-->
+				</label>
 			</div>
 			<div class="menuContainer">
 				<button id="add100PointsButton">Add 100 points</button>
