Add getNearestNeighbor method, which will ignore the point which lies exactly on the specified coordinates.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>
-			Quad Tree
+			Point-Region Quadtree
 		</title>
 
 		<meta name="author" content="Roland Rytz">
@@ -42,7 +42,7 @@
 	<body>
 		<header>
 			<a id="title" href="./">
-				<h1>Quad Tree</h1>
+				<h1>Quadtree</h1>
 			</a>
 			<label for="mode">Click action: </label>
 			<div class="fancyRadio" id="mode">
@@ -76,11 +76,11 @@
 			<canvas id="canvas"></canvas>
 		</div>
 		<footer>
-			<p id="footer">by <a rel="author" href="http://draemm.li">Roland Rytz</a> - <a href="https://github.com/RolandR/quadtree">Source</a></p>
+			<p id="footer">by <a rel="author" target="_blank" href="http://draemm.li">Roland Rytz</a> - Source under the <a target="_blank" rel="license" href="./LICENSE">AGPL v3</a> on <a target="_blank" href="https://github.com/RolandR/quadtree">GitHub</a>.</p>
 		</footer>
 
-		<script type="text/javascript" src="./quadtree.js?v=4"></script>
-		<script type="text/javascript" src="./quadtreeTest.js?v=2"></script>
+		<script type="text/javascript" src="./quadtree.js?v=5"></script>
+		<script type="text/javascript" src="./quadtreeTest.js?v=3"></script>
 	</body>
 	
 </html>
