Fix Add-100 button to actually add 100

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!--
 	========================================================================
 
-	Point-Region Quad Tree
+	Point-Region Quadtree
 	
 	Copyright (C) 2017 Roland Rytz <roland@draemm.li>
 	Licensed under the GNU Affero General Public License Version 3
@@ -27,14 +27,17 @@
 		<title>
 			Point-Region Quadtree
 		</title>
-
+		
+		<meta name="description" content="A simple implementation of a Point-Region Quadtree in Javascript.">
+		<meta name="keywords" content="Quadtree, Point-Region Quadtree, PR Quadtree, Quad Tree">
 		<meta name="author" content="Roland Rytz">
 		<meta name="robots" content="index, follow">
+		<meta name="application-name" content="JavaScript Quadtree">
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="mobile-web-app-capable" content="yes">
 		
-		<link href="./style.css?v=1" rel="stylesheet" type="text/css" media="all">
+		<link href="./style.css?v=2" rel="stylesheet" type="text/css" media="all">
 	</head>
 
 
@@ -79,8 +82,8 @@
 			<p id="footer">by <a rel="author" target="_blank" href="http://draemm.li">Roland Rytz</a> - Source under the <a target="_blank" rel="license" href="./LICENSE">AGPL v3</a> on <a target="_blank" href="https://github.com/RolandR/quadtree">GitHub</a>.</p>
 		</footer>
 
-		<script type="text/javascript" src="./quadtree.js?v=5"></script>
-		<script type="text/javascript" src="./quadtreeTest.js?v=3"></script>
+		<script type="text/javascript" src="./quadtree.js?v=6"></script>
+		<script type="text/javascript" src="./quadtreeTest.js?v=4"></script>
 	</body>
 	
 </html>
